Sun Oct 20 15:41:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): create a new, temporary FD via rb_sysopen and
	  call rb_cloexec_dup2 on it to atomically replace the file fptr->fd
	  points to.  This leaves no possible window where fptr->fd is invalid
	  to userspace (even for any threads running w/o GVL).  based on the
	  patch by Eric Wong <normalperson@yhbt.net> at [ruby-core:57943].
	  [Bug #9036]

Sun Oct 20 15:29:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_syserr_fail_path_in): new function split from
	  rb_sys_fail_path_in to raise SystemCallError without errno.

	* internal.h (rb_syserr_fail_path): like rb_sys_fail_path but without
	  errno.

Sun Oct 20 13:58:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_obj_wb_unprotect, rb_obj_written),
	  (rb_obj_write): suppress unused-parameter warnings.

Sun Oct 20 10:32:48 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update RubyGems to master 0886307.  This commit
	  improves documentation and should bring ruby above 75% documented on
	  rubyci.

Sun Oct 20 09:30:56 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 3de7e0f.  Changes:

	  Only attempt to build extensions for newly-installed gems.  This
	  prevents compilation attempts at gem activation time for gems that
	  already have extensions built.

	  Fix crash in the dependency resolver for dependencies that cannot be
	  resolved.

	* test/rubygems:  ditto.

Sun Oct 20 05:24:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_class2name): should return real class name, not
	  singleton class or iclass.

Sun Oct 20 04:18:48 2013  Aman Gupta <ruby@tmm1.net>

	* variable.c (rb_class2name): call rb_tmp_class_path() directly to
	  avoid extra rb_str_dup() from rb_class_name().

Sat Oct 19 19:59:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (code_page): use simple array instead of st_table.
